--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,17 @@
 @font-face {
 	font-family: 'Apercu Bold';
-	src: url('../assets/apercu-bold.ttf');
+	src: url('../assets/apercu-bold.ttf') format('truetype'),
+          url('../assets/apercu-bold.woff') format('woff');
 }
 @font-face {
 	font-family: 'Apercu Medium';
-	src: url('../assets/apercu-medium.ttf');
+	src: url('../assets/apercu-medium.ttf') format('truetype'),
+     url('../assets/apercu-medium.woff') format('woff');
 }
 @font-face {
 	font-family: 'Apercu Regular';
-	src: url('../assets/apercu-regular.ttf');
+	src: url('../assets/apercu-regular.ttf') format('truetype'),
+     url('../assets/apercu-regular.woff') format('woff');
 }
 
 html {
